# White_Blood_Cell_Image_Classification

./: .gitignore  README.md  classify_wbc.py  download_data.py  predict.py  pyproject.toml  requirements.txt  train.ipynb  train.py  train_analysis.py  white_blood_cell_image_classification.ipynb
analysis/: compare_models.py  train_analysis.py
inference_backend_py/: app.py  app_parameters.json  kill.sh  start.sh
inference_frontend/: index.html  main.js
