[project]
name = "white-blood-cell-clasification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "neattime>=0.0.4",
    "numpy>=2.2.4",
    "rarfile>=4.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "unrar>=0.4",
]
